Harden the open core per code review; require Manta 1.0.2
- Network payloads verify server-side authority: station-group creation
  uses the server's held-tool selection, management-computer actions check
  linked-train membership, and ticket-config requests validate reach + access.
- Poster image storage is bounded: per-world quota, per-poster count,
  atomic writes, and image content validation.
- Wiki prebuild capture has an allocation budget (layout/pixel/resource caps).
- Corrupt SavedData entries are isolated instead of dropping the whole store;
  integrated-server persistent energy no longer carries across worlds.
- The ticket-vending destination decoder is bounded against malformed packets.
- Require Manta >= 1.0.2 (the WikiPrebuild / MantaAnim facades TSU references
  first ship in 1.0.2).
- Fix a stale source link in the substation electrification wiki page.